<resources>
    <string name="app_name">Voleg</string>
    <string name="feedback">Вiдгук</string>
    <string name="submitAdv">⊕ Додати</string>
    <string name="error">Помилка</string>
    <string name="alert_network">Стався мережевий збій</string>
    <string name="retry">Повторивши</string>
    <string name="title_feedback">Залишити відгук</string>
    <string name="email">Ел. пошта:</string>
    <string name="email_placeholder">Ел. пошта</string>
    <string name="feedback_title">Відгук:</string>
    <string name="send">Надіслати</string>
    <string name="add_phone">Додати номер телефона</string>
    <string name="cancel">Скасувати</string>
    <string name="done">Гаразд</string>
    <string name="add_number_btn">⊕ Додати номер телефона</string>
    <string name="submit_btn">Додати оголошення</string>
    <string name="please_check_phone_numbers">Будь ласка, перевірте номери телефонів</string>
    <string name="phone_numbers">Номери телефонів</string>
    <string name="upload_image_btn">Завантажити зображення</string>
    <string name="upload_new_image">Завантажити нове зображення</string>
    <string name="text_view_placeholder">Введіть Ваш текст\n будь ласка</string>
    <string name="please_wait">Будь ласка, зачекайте…</string>
    <string name="switcher_text">Текст</string>
    <string name="switcher_image">Зображення</string>
    <string name="error_with_text">Щось сталося з текстом</string>
    <string name="adv_text_too_short">Оголошення дуже коротке</string>
    <string name="no_numbers_added">Будь ласка, додайте хоча б один номер телефону</string>
    <string name="adve_no_call_providers_for_phone">Для номера телефону не вибрано жодної програми</string>
    <string name="phone_numbers_are_not_valid">Введіть дійсний номер телефону</string>
    <string name="thanks_for_submitting_adv">Дякуємо за ваше нове оголошення! Воно з\'явиться відразу після модерації якомога швидше</string>
    <string name="adv_image_not_selected">Будь ласка виберіть зображення для оголошення</string>
    <string name="ok">OK</string>
    <string name="thanks_for_feedback">Дякую за ваш відгук!</string>
    <string name="no_text_in_feedback">Будь ласка напишіть ваш відгук</string>
    <string name="provider_is_not_available">Здається, що %1$s недоступний</string>
    <string name="phone_recognising">Розпізнавання номерів</string>
    <string name="news">🗞 Новини кордону</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="are_you_taking_parcels">Ви берете передачі (посилки) 📦 ?</string>
    <string name="accept_parcels">берем\nпередачі</string>
</resources>