<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:navigationIcon="@drawable/ic_back"
                app:titleTextColor="@color/colorAccent" />

            <View
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DFDFDF" />

            <com.greenzeal.voleg.views.segmentedbutton.SegmentedButton
                android:id="@+id/switchers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:borderColor="#CCCCCC"
                app:rippleColorChecked="#ffffff"
                app:segmentColorChecked="@color/colorAccent"
                app:spreadType="evenly"
                app:textColor="@android:color/black"
                app:textColorChecked="@android:color/white">

                <RadioButton
                    android:id="@+id/switcher_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/switcher_text" />

                <RadioButton
                    android:id="@+id/switcher_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switcher_image" />
            </com.greenzeal.voleg.views.segmentedbutton.SegmentedButton>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adv_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:boxBackgroundColor="@android:color/white"
                app:helperTextEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adv_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border_not_radius"
                    android:gravity="center"
                    android:hint="@string/text_view_placeholder"
                    android:inputType="textMultiLine"
                    android:maxHeight="374dp"
                    android:maxLength="70"
                    android:minHeight="374dp"
                    android:minLines="6"
                    android:textColorHint="@android:color/black"
                    android:textSize="30sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:scrollbars="none"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/color1"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:background="#FEFFBF" />

                    <View
                        android:id="@+id/color2"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="6dp"
                        android:background="#FCDCDF" />

                    <View
                        android:id="@+id/color3"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="6dp"
                        android:background="#79AAAD" />

                    <View
                        android:id="@+id/color4"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="6dp"
                        android:background="#C997C6" />

                    <View
                        android:id="@+id/color5"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="6dp"
                        android:background="#B0EFEF" />

                    <View
                        android:id="@+id/color6"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="6dp"
                        android:background="#83D9DC" />
                </LinearLayout>
            </HorizontalScrollView>

            <FrameLayout
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:visibility="gone">

                <TextView
                    android:id="@+id/image_view_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_new_image" />

                <ImageView
                    android:id="@+id/image_to_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:minHeight="330dp"
                    android:scaleType="fitCenter" />
            </FrameLayout>

            <Button
                android:id="@+id/image_add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:height="44dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/upload_image_btn"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/phone_numbers"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/please_check_phone_numbers"
                android:textColor="@color/colorTextRed"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


            <Button
                android:id="@+id/add_number_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/add_number_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/send_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
